...
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtRuac"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...

                    <TextView
                        android:id="@+id/txtTramitarRuac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtNombreMascota"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/txtFechaNacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/txtFechaAdopcion"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/txtEspecie"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/txtRaza"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutRazaOtro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/txtIdentificarRaza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/txtColor"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/txtSexo"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
...
                            app:errorIconDrawable="@null">
                            <EditText
                                android:id="@+id/txtPeso"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
...
                            app:errorIconDrawable="@null">
                            <EditText
                                android:id="@+id/txtEstatura"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
...

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFoto"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGuardarMascota"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
...
